--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -19,38 +19,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1uH-0a-RkD">
-                                <rect key="frame" x="0.0" y="446" width="375" height="221"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="345" width="375" height="322"/>
+                                <color key="backgroundColor" red="0.86778533459999996" green="0.3694689572" blue="0.33722573519999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="221" id="dKJ-vK-Bxl"/>
+                                    <constraint firstAttribute="height" constant="322" id="dKJ-vK-Bxl"/>
                                 </constraints>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7nS-Qa-Ubf">
-                                <rect key="frame" x="0.0" y="243" width="375" height="206"/>
+                                <rect key="frame" x="0.0" y="243" width="375" height="102"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="206" id="Nsa-FQ-uN7"/>
+                                    <constraint firstAttribute="height" constant="102" id="Nsa-FQ-uN7"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="1oF-Tw-a9E">
-                                <rect key="frame" x="78" y="50" width="219" height="170"/>
+                                <rect key="frame" x="72" y="50" width="231.5" height="185"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2f-z2-OrX">
-                                        <rect key="frame" x="77" y="0.0" width="65.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Pokedex" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v2f-z2-OrX">
+                                        <rect key="frame" x="78.5" y="0.0" width="74.5" height="19.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a pokemon name or id:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rNr-SD-nYK">
-                                        <rect key="frame" x="0.0" y="43.5" width="219" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <rect key="frame" x="0.0" y="42.5" width="231.5" height="21.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hig-AO-WIa">
-                                        <rect key="frame" x="59.5" y="87" width="100" height="30"/>
+                                        <rect key="frame" x="65.5" y="87" width="100" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="fGq-WP-Aca"/>
                                             <constraint firstAttribute="height" constant="30" id="iup-0w-huD"/>
@@ -60,7 +60,11 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9U-x2-BRs">
-                                        <rect key="frame" x="85" y="140" width="49" height="30"/>
+                                        <rect key="frame" x="91" y="140" width="49" height="45"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="3qs-cp-EoK"/>
+                                        </constraints>
                                         <state key="normal" title="Submit"/>
                                         <connections>
                                             <action selector="submitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wre-WD-mli"/>
@@ -69,16 +73,18 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.86778533459999996" green="0.3694689572" blue="0.33722573519999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="7nS-Qa-Ubf" firstAttribute="leading" secondItem="1uH-0a-RkD" secondAttribute="leading" id="7Xn-7d-IG1"/>
                             <constraint firstItem="7nS-Qa-Ubf" firstAttribute="centerX" secondItem="1oF-Tw-a9E" secondAttribute="centerX" id="FLC-mk-Usg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7nS-Qa-Ubf" secondAttribute="bottom" constant="218" id="GQd-u4-AQd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7nS-Qa-Ubf" secondAttribute="bottom" constant="322" id="GQd-u4-AQd"/>
                             <constraint firstItem="7nS-Qa-Ubf" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="IFq-qn-45X"/>
                             <constraint firstItem="1oF-Tw-a9E" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="MOj-ID-Glp"/>
                             <constraint firstItem="1uH-0a-RkD" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="P8u-YU-N3b"/>
+                            <constraint firstItem="7nS-Qa-Ubf" firstAttribute="top" secondItem="1oF-Tw-a9E" secondAttribute="bottom" constant="8" id="ZvX-HU-E0J"/>
                             <constraint firstItem="7nS-Qa-Ubf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="aPv-jB-Ncm"/>
                             <constraint firstItem="1uH-0a-RkD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cFY-vp-ley"/>
+                            <constraint firstItem="7nS-Qa-Ubf" firstAttribute="top" secondItem="1oF-Tw-a9E" secondAttribute="bottom" constant="8" id="vzI-kM-MRO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
